# deadbolt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cli.cpp  filebackend.hpp
.github/workflows/: build.yml  release.yml
include/clipboard/: clipboard.cpp  clipboard.hpp
include/filebackend/: filebackend.cpp  filebackend.hpp
include/keyapi/: keyapi.c  keyapi.h
include/logger/: logger.cpp  logger.hpp
include/parser/: parser.cpp  parser.hpp
include/store/: store.c  store.h  store_sql.c  store_wrapper.hpp
include/totp/: totp.c  totp.cpp  totp.hpp
include/tui/: tui.cpp  tui.hpp
src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DEADBOLT.sln  DEADBOLT.vcxproj  DEADBOLT.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cli.cpp  cmake_install.cmake
src/DEADBOLT.dir/Debug/DEADBOLT.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/include/filebackend/: filebackend.hpp
src/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
tui/: tui.py
